Added chat, transcripts, and video links for authoring workshops

--- a/submissions/author_support.html
+++ b/submissions/author_support.html
@@ -25,7 +25,11 @@
 			<li>reading draft abstracts and articles and providing initial feedback</li>
 			<li>assistance with English-language editing, for accepted submissions</li>
 		</ul>
-		<p>Starting in January 2023, DHQ's peer review team is holding a series of online workshops to provide information for potential authors about DHQ's submission, review and publication process. The workshops are aimed at authors new to digital humanities, as part of our larger goal to expand DHQ's mentoring of authors even prior to submitting an article. Please see our <a href="../news/news.html">news page</a> for announcements and event details.</p>
+		<p>Starting in January 2023, DHQ's peer review team is holding a series of online workshops to provide information for potential authors about DHQ's submission, review and publication process. The workshops are aimed at authors new to digital humanities, as part of our larger goal to expand DHQ's mentoring of authors even prior to submitting an article. Please see our <a href="../news/news.html">news page</a> for announcements and event details. Recordings of our first two events are now available:</p>
+		<ul>
+			<li>Orientation workshop, 12 January 2023: <a href="https://vimeo.com/788667945">Video</a>, <a href="dhq_workshop_transcript_2022-01-12.txt">transcript</a>, <a href="dhq_workshop_chat_2023-01-12.txt">chat</a></li>
+			<li>Orientation workshop, 13 January 2023: <a href="https://vimeo.com/791282705">Video</a>, <a href="dhq_workshop_transcript_2022-01-13.txt">transcript</a>, <a href="dhq_workshop_chat_2023-01-13.txt">chat</a></li>
+		</ul>
 		<p>We’re also starting to build a team of volunteer mentors who can help us provide support to authors. The activities of this team will include:</p>
 		<ul>
 			<li>read and provide feedback on drafts from authors new to the field</li>
