--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -65,7 +65,24 @@
     	<h2>Figures</h2>
         <p>DHQ will accept figures in any of the the following web-ready formats: PNG, JPG, GIF, and SVG.  Image files can be embedded in the submission file for the peer review process, but for final submission of accepted articles, high-quality versions of all image files should be uploaded separately to OJS. All image files should be named consistently based on their order of appearance: figure01.jpg, figure02.jpg, etc. To ensure accurate placement of images, include a reference to the filename of the graphic in the text where the graphic should be included.</p>
         <p>All figures will receive an automatically generated heading ("Figure 1", "Figure 2", etc.). You may also include a more specific label or descriptive caption, which will follow this initial label. Descriptive captions may be the length of a short paragraph, but should not include complex internal structures. This label/caption should not be included in the image file, but should be part of the article text.</p>
-    	<p>All figures must be accompanied by a description suitable to serve as the alternative text for accessibility purposes. This text will become the content of the "alt" attribute for the image in the DHQ web publication. If your image heading is descriptive enough to serve this purpose, you can simply duplicate it. (For instance, "An image of Leonardo da Vinci's La Gioconda.") However if your image heading does not convey sufficient descriptive detail to enable a low-vision reader to grasp the significance of the image (for instance, "Map interface"), you should provide a separate description.</p>
+    	<p>All figures must also be accompanied by a description suitable to serve as the alternative text for accessibility purposes. This text will become the content of the "alt" attribute for the image in the DHQ web publication, to support accessibility tools and assistive technologies. The figure description is not the same as the caption, and to provide good accessibility support the description should follow these guidelines:</p>
+    	<ul>
+    		<li>The figure description should be short: from a short phrase to a sentence in length in most cases</li>
+    		<li>The description should convey the image’s meaning or purpose in the context of an article. It is not an exhaustive description of the image, but rather a description that enables the reader to understand the rhetorical or evidentiary function the image was performing.</li>
+    		<li>Avoid lengthy descriptions of the visual qualities or materiality of the image, such as color or medium, unless they are key to the function of the image within the article and are not mentioned in either the caption or the accompanying article text.</li>
+    		<li>Avoid the use of words like “image” or “graphic” in the description, as most screen readers already say when there is an image. </li>
+    		<li>Do not reuse the text from the image caption, as the repetition is not necessary for visual or audio access to the article.</li>
+    		<li>For graphs, focus on the meaning or outcomes of the data, rather than what the chart looks like. Consider the following template by Amy Cesal as a beginning point: “[chart type] of [type of data] where [ reason for including chart]”. You may need to deviate from this form to avoid redundancy or provide the most appropriate description for the context. </li>
+    	</ul>
+    	
+    	<p>Depending on how an image is being used, it may require a different description in different contexts. Here are some examples:</p>
+    	<ul>
+			<li>A possible general description: A cat with a blanket.</li>
+    		<li>For a study on the behavior of a particular cat: Esther kneading a soft surface in the evening.</li>
+    		<li>For a treatise on cat breeds: A mature Nebelung cat.</li>
+    		<li>For an article about personal photography and consumer electronics: A photograph taken in low light on an iPhone 12.</li>
+		</ul>
+    
         <h2>Mathematical Expressions and Formulas</h2>
         <p>DHQ represents mathematical expressions and formulas using TeX or MathML. Simple mathematical expressions and formulas can usually be converted automatically as part of our initial conversion routine using OxGarage. More complex formulas may cause problems for conversion. For the initial submission, it is fine to include formulas directly in the article. If the article is accepted, we will ask you to submit a finalized version in which the formulas are indicated in the text with a label (e.g. "formula 1"), and with the actual formulas submitted in TeX or valid MathML in a separate document, so that they can be inserted into the XML at the appropriate places.</p>
         <h2>Examples</h2>
