uploaded sample image for figDesc guidelines

--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -76,6 +76,7 @@
     	</ul>
     	
     	<p>Depending on how an image is being used, it may require a different description in different contexts. Here are some examples:</p>
+    	<img src="../common/images/esther_cat.png" alt="An image of a cat, serving as a sample image"/>
     	<ul>
 			<li>A possible general description: A cat with a blanket.</li>
     		<li>For a study on the behavior of a particular cat: Esther kneading a soft surface in the evening.</li>
