--- a/submissions/cfps.html
+++ b/submissions/cfps.html
@@ -26,7 +26,23 @@
      <p>Description (or subdivide with <h3>)</p>
             -->
         
-<h2>Working on and with Categories for Text Analysis: Challenges and Findings from and for Digital Humanities Practices</h2>
+<h2>Data Science and History: Practicing and Theorizing Data-Driven Inquiries into the Past</h2>
+    	<p>Guest editors: Gabor Toth, Caitlin Burge, Christoph Purschke, Marten Düring</p>
+<p>In the last decade historians have witnessed a proliferation of digitized and born-digital data sets. Historical data sets encourage data-driven inquiries into the past, as well as the integration of data science methods into historical research. This collection of papers will offer a panorama of the current state of the art in the application of data science methods in historical research; it will be submitted to the Digital Humanities Quarterly (DHQ) as a special issue.</p><p>
+We specifically invite contributions that analyze data sets and integrate complex models of data science into historical inquiry. We also seek contributions that discuss the development of new data sets and research softwares. </p><p>
+We encourage contributions between 5000 and 8000 words, though shorter papers (3000 - 5000) will also be considered.</p><p>
+Submission timeline: </p>
+<ul>
+	<li>15 July 2023: submit an abstract of your paper (max. 500 words) through the following link: 
+https://tinyurl.com/mr24cecv </li>
+	<li>15 August 2023:  Notification of acceptance and submission of accepted abstracts to DHQ</li>
+	<li>10 December 2023:  submit your complete paper (submission link TBA)
+</li></ul>
+	<p>We aim to publish the special issue in the summer of 2024.</p><p>
+For further information, see the <a href="https://www.c2dh.uni.lu/news/cfp-data-science-and-history-practicing-and-theorizing-data-driven-inquiries-past">complete call</a>.
+Or please contact Gabor Mihaly Toth: <a href="mailto:gabor.toth@maximilianeum.de">gabor.toth@maximilianeum.de</a> (please use the subject header “DHQ Special Issue”).
+</p>
+    	<h2>Working on and with Categories for Text Analysis: Challenges and Findings from and for Digital Humanities Practices</h2>
      <p>Guest editors: Dominik Gerstorfer, Evelyn Gius and Janina Jacke</p>
      <p>Abstracts due (extended deadline): June 22, 2022</p>
      <h3>Introduction</h3>
