--- a/people/people.html
+++ b/people/people.html
@@ -173,6 +173,15 @@
             <p class="bio">Robin Hershkowitz is a researcher and writer. She holds an M.A. in Popular Culture and a Ph.D. in American Culture Studies. Along with digital humanities, her research interests include television history, internet archiving, performance studies, and queer studies. She also works as a book coach for nonfiction authors.</p>
         </div>
 		
+<div>
+          <div id="BioExpander16" style="DISPLAY: inline">
+            <a class="expandCollapse" title="View Bio" href="javascript:expandBio(11)">[+]</a>
+          </div> Schemas Editor: Syd Bauman, Northeastern University <br />
+        </div>
+        <div id="Bio16" style="DISPLAY: none">
+            <p class="bio">Syd Bauman is the Senior XML Programmer/Analyst for the Digital Scholarship Group at Northeastern University and serves on the TEI Technical Council. Although technically neither a humanist nor a computer scientist, he has been working at the intersection of these two fields for over a third of a century. He has been working with formal schema languages since 1993 (starting with the SGML DTD language), and on a formal schema language (TEI P5 ODD) since 2004. His favorite schema languages are Schematron and RELAX NG, although he is quick to point out that TEI ODD provides for dramatically better documentation of the markup language being defined.
+</p>
+        </div>		
       
  <!--    TEMPLATE for bios (the numeric portions in lines 161, 162, and 165 need to match)   
         <div>
@@ -206,10 +215,10 @@
         <h2>Managing Editors</h2>
         <p>The Managing Editors are responsible for managing the journal's submission, review, and production processes. They also undertake special projects as needed for the development of the journal.</p>
         <ul>
-            <li>Avery Blankenship, Northeastern University</li>
         	<li>Reba Dickson, Northeastern University</li>
             <li>R. B. Faure, Northeastern University</li>
             <li>Benjamin Grey, Northeastern University</li>
+        	<li>Cailin Roles, Northeastern University</li>
         	<li>Alicia Svenson, Northeastern University</li>
         </ul>
 <!--              
@@ -234,9 +243,8 @@
         <h2>Development Staff</h2>
         <p>The Development Staff are responsible for the technical architecture and implementation of the journal's publication systems.</p>
         <ul>
-            <li>Open Journal Systems Support: Patrick Murray-John and Karl Yee, Northeastern University</li>
-			<li>Associate Technical Editor: Chuck Burd</li>
-        	<li>Bibliographic Systems: Ash Clark, Northeastern University</li>
+            <li>Open Journal Systems Support: Patrick Murray-John, Greg McClellan, and Karl Yee, Northeastern University</li>
+        	<li>Publication and Bibliographic Systems: Ash Clark, Northeastern University</li>
         </ul>
         <h2>Advisory Board</h2>
         <p>Starting in 2022, the Advisory Board is being re-established along new lines. If you're interested in contributing expertise to the journal, please contact us at editors@digitalhumanities.org.</p>
@@ -247,6 +255,7 @@
        <h2>Former Contributors</h2>
         <p>Managing Editors:</p>
         <ul>
+            <li>Avery Blankenship, Northeastern University</li>
             <li>Cassandra Cloutier, Managing Editor</li>
             <li>David DeCamp, Managing Editor</li>
             <li>Elizabeth Hopwood, Managing Editor</li>
@@ -259,6 +268,7 @@
         </ul>
         <p>Editors:</p>
         <ul>
+			<li>Chuck Burd, Associate Technical Editor</li>
             <li>Michelle Dalmau, Usability Editor</li>
             <li>Jessica Pressman, Articles Editor</li>
             <li>Geoffrey Rockwell, Interactive Media Editor</li>
