reformatting keywords taxonomy & style guidelines
Collapsed scopeNote attributes into the description attribute of the DHQ Topic Keywords. Updated citation guidelines to include guidance on citations without a given/known date. Clarified some ambiguous guidance

--- a/submissions/citationGuidelines.html
+++ b/submissions/citationGuidelines.html
@@ -4,93 +4,82 @@
 		<title>DHQ Citation Guidelines</title>
 	</head>
 	<body>
-		<p class="anchorNav">
-        	<a href="index.html">Submission Guidelines</a>  |  
-        	<a href="textGuidelines.html">Style Guidelines</a>  |  
-        	<strong>Citation Guidelines</strong>  |  
-        	<a href="publication_terms.html">Terms of Publication</a> |
-        	<a href="author_support.html">Author Support</a>
-        	<br />
-        	<a href="cfps.html">CFPs</a>  | 
-        	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
-        	<a href="peerReviewing.html">Peer Reviewing for DHQ</a>  |
-        	<a href="reviews.html">Book and Tool Reviews</a>  | 
-        	<a href="statistics.html">Acceptance Rates and Indexing</a>
-        </p>
-
+		<p class="anchorNav"> <a href="index.html">Submission Guidelines</a> | <a href="textGuidelines.html"
+			>Style Guidelines</a> | <strong>Citation Guidelines</strong> | <a href="publication_terms.html"
+			>Terms of Publication</a> | <a href="author_support.html">Author Support</a> <br /> <a
+			href="cfps.html">CFPs</a> | <a href="specialIssuesGuidelines.html">Special Issues</a> | <a
+			href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="reviews.html">Book and Tool
+			Reviews</a> | <a href="statistics.html">Acceptance Rates and Indexing</a> </p>
 		<h1>DHQ Citation Style Guidelines</h1>
-		<p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
-				Guidelines</a>
-		</p>
-		<p>DHQ uses the Harvard Referencing system. Please format your in-text references and
-			reference list as outlined below. </p>
+		<p class="print">&gt;&gt; <a href="#" onclick="window.print();return false;">Print Guidelines</a> </p>
+		<p>DHQ uses the Harvard Referencing system. Please format your in-text references and reference list
+			as outlined below. </p>
 		<h2>In-Text References</h2>
 		<h3>Reference Elements</h3>
 		<p>To create an in-text reference in the Harvard style, there are two required elements: </p>
 		<ul>
-			<li>Author&rsquo;s surname or, in the case of works of film or television, title. If
-				there are more than three authors, in-text references should be abbreviated as the
-				first author&rsquo;s surname followed by &ldquo;et al.&rdquo;</li>
+			<li>Author&rsquo;s surname or, in the case of works of film or television, title. If there are
+				more than three authors, in-text references should be abbreviated as the first author&rsquo;s
+				surname followed by &ldquo;et al&rdquo;.</li>
 			<li>Year, in four-digit format (YYYY).</li>
 		</ul>
 		<p>There is also an optional third element: </p>
 		<ul>
-			<li>Location, such as page number(s), paragraph, or section number. These are noted as:
-				&ldquo;p. XX&rdquo; or &ldquo;pp. XX–XX&rdquo;. Page ranges are delimited with an en
-				dash (–) rather than a hyphen. Paragraph numbers are noted with a pilcrow (&para;)
-				and section numbers with a section sign (&sect;): &ldquo;&para;XX&rdquo; or
-				&ldquo;&sect;X&rdquo;, with no space between the symbol and the number.</li>
+			<li>Location, such as page number(s), paragraph, or section number. These are noted as: &ldquo;p.
+				XX&rdquo; or &ldquo;pp. XX–XX&rdquo;. Page ranges are delimited with an en dash (–) rather
+				than a hyphen. Paragraph numbers are noted with a pilcrow (&para;) and section numbers with a
+				section sign (&sect;): &ldquo;&para;XX&rdquo; or &ldquo;&sect;X&rdquo;, with no space between
+				the symbol and the number.</li>
 		</ul>
-		<p>Stylistic notes or additions are never part of in-text parenthetical references.
-			Clarifications such as &ldquo;emphasis added&rdquo; should be made in a footnote rather
-			than in the context of the reference.</p>
+		<p>Stylistic notes or additions are never part of in-text parenthetical references. Clarifications
+			such as &ldquo;emphasis added&rdquo; should be made in a footnote rather than in the context of
+			the reference.</p>
 		<h3>Reference Forms</h3>
-		<p>In-text references may take one of two forms within the Harvard style and DHQ articles
-			support both options. Either the surname should remain part of the prose of the article,
-			with supporting information in parentheses, or the entire reference should be enclosed
-			in parentheses. See these brief examples below for how to employ the guidelines:</p>
+		<p>In-text references may take one of two forms within the Harvard style and DHQ articles support both
+			options. Either the surname should remain part of the prose of the article, with supporting
+			information in parentheses, or the entire reference should be enclosed in parentheses. See these
+			brief examples below for how to employ the guidelines:</p>
 		<ul>
 			<li>&hellip; as Mendez Garcia (2007) writes &hellip;</li>
 			<li>&hellip; in their report, Campbell and Murray (2013, p. 426) note &hellip;</li>
-			<li>&hellip; building on that research, Elliott et al. (2022, &sect;5.1) illustrate
-				&hellip;</li>
+			<li>&hellip; building on that research, Elliott et al. (2022, &sect;5.1) illustrate &hellip;</li>
 			<li>&hellip; as we had proven (Fletcher et al, 2010), therefore, &hellip;</li>
 			<li>&hellip; shown previously (Phillips, 2016, pp. 4–9).</li>
-			<li>&hellip; based upon prior studies (Chandler, Li, and Osborne, 2018, &para;15), I
-				expected &hellip;</li>
+			<li>&hellip; based upon a prior study (Chandler, Li, and Osborne, 2018, &para;15), I expected
+				&hellip;</li>
 		</ul>
-		<p>DHQ in-text references differ from the standard Harvard style in only one significant
-			way. Multiple references, whether they be from the same author in different years,
-			multiple works, or different editions of the same text, should never be combined. Please
-			provide each reference as a unique entity.</p>
+		<p>DHQ in-text references differ from the standard Harvard style in only one significant way. Multiple
+			references, whether they be from the same author in different years, multiple works, or different
+			editions of the same text, should never be combined. Please provide each reference as a unique
+			entity.</p>
 		<h2>Reference List</h2>
-		<p>Most entries in the reference list begin in a similar fashion: with the author&rsquo;s
-			name followed by the date of publication. The list should be organized alphabetically
-			(single-authored works first), and then chronologically if necessary. As is the case
-			across most citation styles, the reference for a printed book is the simplest and the
-			basis for all other formats. A quick guide to some of the most referenced materials is
-			below. Not every element is required for each type of reference. Items which are only
-			necessary in certain circumstances are enclosed in curly braces &ldquo;{}&rdquo;. Please
-			note the following particulars:</p>
+		<p>Most entries in the reference list begin in a similar fashion: with the author&rsquo;s name
+			followed by the date of publication. The list should be organized alphabetically (single-authored
+			works first), and then chronologically if necessary. As is the case across most citation styles,
+			the reference for a printed book is the simplest and the basis for all other formats. A quick
+			guide to some of the most referenced materials is below. Not every element is required for each
+			type of reference. Items which are only necessary in certain circumstances are enclosed in curly
+			braces &ldquo;{}&rdquo;. Please note the following particulars:</p>
 		<ul>
-			<li>Author names should be given with a surname first, followed by a comma, and then
-				either a full first name or initials (use whichever form is provided by the
-				reference&rsquo;s published record)</li>
-			<li>Articles with two authors should be separated by &lsquo;and&rsquo; (e.g., Campbell,
-				James and Murray, Elizabeth.)</li>
-			<li>Articles with three authors should be first separated by comma and then
-				&lsquo;and&rsquo; (e.g., Chandler, W., Li, S., and Osborne, T.)</li>
-			<li>Articles with four or more authors should list the first author, followed by
-				&lsquo;et al.&rsquo; (e.g., Fletcher, Sarah et al.)</li>
-			<li>Initials should be followed by a full point and a space (e.g., an entry for John
-				Edward Doe in the reference list would be &ldquo;Doe, J. E.&rdquo;)</li>
+			<li>Author names should be given with a surname first, followed by a comma, and then either a full
+				first name or initials (use whichever form is provided by the reference&rsquo;s published
+				record)</li>
+			<li>Articles with two authors should be separated by &lsquo;and&rsquo; (e.g., Campbell, James and
+				Murray, Elizabeth.)</li>
+			<li>Articles with three authors should be first separated by comma and then &lsquo;and&rsquo;
+				(e.g., Chandler, W., Li, S., and Osborne, T.)</li>
+			<li>Articles with four or more authors should list the first author, followed by &lsquo;et
+				al.&rsquo; (e.g., Fletcher, Sarah et al.)</li>
+			<li>Initials should be followed by a full point and a space (e.g., an entry for John Edward Doe in
+				the reference list would be &ldquo;Doe, J. E.&rdquo;)</li>
 			<li>Editor names should be treated in the same manner as author names.</li>
 			<li>&ldquo;X&rdquo; is used to represent numerals</li>
-			<li>&ldquo;DD Month YYYY&rdquo; is a two-digit date, the month spelled out completely,
-				and a four-digit year</li>
+			<li>&ldquo;DD Month YYYY&rdquo; is a two-digit date, the month spelled out completely, and a
+				four-digit year</li>
+			<li>Any references without a known date should replace the four-digit date field with &ldquo;n.d.&rdquo;</li>
 			<li>All italics and parentheses should remain and are required</li>
-			<li>Places of publication should be only the name of the municipality unless further
-				specification is required</li>
+			<li>Places of publication should be only the name of the municipality unless further specification
+				is required</li>
 			<li>Page ranges are delimited with an en dash (–), not a hyphen</li>
 			<li>Volumes and issues are written as numerals (without &ldquo;vol.&rdquo; or
 				&ldquo;iss.&rdquo;)</li>
@@ -98,52 +87,52 @@
 		<h3>Printed Book</h3>
 		<p>Author Name. (YYYY) <em>Book Title</em>. {X edn.} Place of Publication: Publisher.</p>
 		<h3>Edited Book</h3>
-		<p>Editor Name. (ed.) (YYYY) <em>Book Title</em>. {X edn.} Place of Publication:
-			Publisher.</p>
+		<p>Editor Name. (ed.) (YYYY) <em>Book Title</em>. {X edn.} Place of Publication: Publisher.</p>
 		<h3>Chapter in an Edited Book</h3>
-		<p>Author Name. (YYYY) &lsquo;Chapter Title&rsquo; in Editor Name (ed.) <em>Book Title</em>.
-			{X edn.} Place of Publication: Publisher, pp. page–range.</p>
+		<p>Author Name. (YYYY) &lsquo;Chapter Title&rsquo; in Editor Name (ed.) <em>Book Title</em>. {X edn.}
+			Place of Publication: Publisher, pp. page–range.</p>
 		<h3>E-Book</h3>
-		<p>Author Name. (YYYY) <em>Book Title</em>. {X edn.} Available at: URL or DOI (Accessed: DD
-			Month YYYY).</p>
+		<p>Author Name. (YYYY) <em>Book Title</em>. {X edn.} Available at: URL or DOI (Accessed: DD Month
+			YYYY).</p>
 		<p>(Follow appropriate adaptations for edited books)</p>
 		<h3>Journal Article</h3>
-		<p>Author Name. (YYYY) &lsquo;Article Title&rsquo;, <em>Journal Title</em>, volume(issue),
-			pp. page–range. {Available at: URL or DOI (Accessed: DD Month YYYY).}</p>
+		<p>Author Name. (YYYY) &lsquo;Article Title&rsquo;, <em>Journal Title</em>, volume(issue), pp.
+			page–range. {Available at: URL or DOI (Accessed: DD Month YYYY).}</p>
+		<h3>Published Conference Procedings</h3>
+		<p>Author Name. (YYYY) &lsquo;Paper Title&rsquo; in <em>Conference Title</em>. Place of
+			Publication: Publisher, pp. page–range. {Available at: URL or DOI (Accessed: DD Month YYYY).}</p>
 		<h3>Newspaper/Magazine Article</h3>
-		<p>Author Name. (YYYY) &lsquo;Article Title&rsquo;, <em>Newspaper/Magazine Title</em>, DD
-			Month, pp. page–range. {Available at: URL or DOI (Accessed: DD Month YYYY).}</p>
+		<p>Author Name. (YYYY) &lsquo;Article Title&rsquo;, <em>Newspaper/Magazine Title</em>, DD Month, pp.
+			page–range. {Available at: URL or DOI (Accessed: DD Month YYYY).}</p>
 		<h3>Website</h3>
-		<p>Author Name {or Organization Name}. (YYYY) <em>Webpage or Website Title</em>. Available
-			at URL (Accessed DD Month YYYY).</p>
+		<p>Author Name {or Organization Name}. (YYYY) <em>Webpage or Website Title</em>. Available at URL
+			(Accessed DD Month YYYY).</p>
 		<h3>Social Media</h3>
-		<p>Author Name. [@mediaHandle] (YYYY) Post Title [Media Platform] DD Month. Available at:
-			URL (Accessed: DD Month YYYY).</p>
-		<p>(Post titles are not italicized, posts without titles (like tweets) use their full
-			content as a title)</p>
+		<p>Author Name. [@mediaHandle] (YYYY) Post Title [Media Platform] DD Month. Available at: URL
+			(Accessed: DD Month YYYY).</p>
+		<p>(Post titles are not italicized, posts without titles (like tweets) use their full content as a
+			title)</p>
 		<h3>Image</h3>
-		<p>Author Name. (YYYY) <em>Image Title</em>. {Place of Publication: Publisher} {Available
-			at: URL (Accessed: DD Month YYYY).}</p>
+		<p>Author Name. (YYYY) <em>Image Title</em>. {Place of Publication: Publisher} {Available at: URL
+			(Accessed: DD Month YYYY).}</p>
 		<h3>Music</h3>
-		<p>Artist Name {or Stage Name}. (YYYY) {&lsquo;Song Title&rsquo;,} <em>Album Title</em>.
-			Place of Distribution: Distribution Company. {Available at: URL (Accessed: DD Month
-			YYYY).}</p>
+		<p>Artist Name {or Stage Name}. (YYYY) {&lsquo;Song Title&rsquo;,} <em>Album Title</em>. Place of
+			Distribution: Distribution Company. {Available at: URL (Accessed: DD Month YYYY).}</p>
 		<h3>Film</h3>
 		<p><em>Film Title</em> (YYYY) Directed by Director&rsquo;s Full Name. Place of Distribution:
 			Distribution Company.</p>
-		<p>(The director&rsquo;s preferred name is written in its proper order as used in common
-			speech)</p>
+		<p>(The director&rsquo;s preferred name is written in its proper order as used in common speech)</p>
 		<h3>Media Program</h3>
-		<p>&lsquo;Episode Title&rsquo; (YYYY) <em>Program Title</em>, Series X, episode XX. Channel
-			or streaming service, DD Month YYYY.</p>
+		<p>&lsquo;Episode Title&rsquo; (YYYY) <em>Program Title</em>, Series X, episode XX. Channel or
+			streaming service, DD Month YYYY.</p>
 		<p>(TV shows, podcasts, and other episodic media fall under this category)</p>
 		<h2>Note</h2>
 		<p>Much of this guide was compiled using information from the <a
-				href="https://www.mendeley.com/guides/harvard-citation-guide/"> Mendeley
-				&ldquo;Harvard Format Citation Guide&rdquo;</a> and the <a
-				href="https://www.easybib.com/guides/citation-guides/harvard-referencing/harvard-referencing-style-examples/"
-				> EasyBib &ldquo;Harvard Referencing Style Guide&rdquo;</a>. For more information,
-			consult these resources or contact <a href="mailto:dhqinfo@digitalhumanities.org"
-				>dhqinfo at digitalhumanities dot org</a> with questions.</p>
+			href="https://www.mendeley.com/guides/harvard-citation-guide/"> Mendeley &ldquo;Harvard Format
+			Citation Guide&rdquo;</a> and the <a
+			href="https://www.easybib.com/guides/citation-guides/harvard-referencing/harvard-referencing-style-examples/"
+			> EasyBib &ldquo;Harvard Referencing Style Guide&rdquo;</a>. For more information, consult these
+			resources or contact <a href="mailto:dhqinfo@digitalhumanities.org">dhqinfo at digitalhumanities
+			dot org</a> with questions.</p>
 	</body>
 </html>
