--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -39,13 +39,7 @@
             the end of the article. (If you are submitting in DHQauthor format, you may encode notes
             inline, and they will be extracted by a stylesheet.)</p>
         <p>Bibliographic references should be made inline and the works cited should be listed in a
-            section at the end of the article headed &quot;References&quot;. The list should
-            be in alphabetical order by reference label (the citation string). Where an author has
-            more than one publication, they should be arranged in chronological order, and if there
-            is more than one publication within a year, they should be alphabetically ordered by
-            title and labelled a, b, etc. (e.g. 1989a, 1989b). Note that reference labels may
-            contain spaces (e.g. [Sperberg-McQueen 1995]). Single-author works precede co-authored
-            works. Please follow the examples given below for bibliographic layout.</p>
+        	section at the end of the article headed &quot;References&quot;. For guidance on how to structure inline references and the works cited section, <a href="http://www.digitalhumanities.org/dhq/submissions/citationGuidelines.html">consult the Citation Guidelines</a>.</p>
         <p>If you are submitting in DHQauthor format, full bibliographic references may be encoded
             in line (where they are cited). These will be extracted by a stylesheet and collected
             into a References section automatically.</p>
