added missing anchor id in submissions guide

--- a/submissions/index.html
+++ b/submissions/index.html
@@ -77,7 +77,7 @@ It must be well written, and must present its argument clearly and interestingly
         <p>Submissions may be of any length, but please bear in mind that although the digital medium is comparatively unbounded, reader attention is not; very long submissions must merit the space they occupy.</p>
        
        
-       <h2>Formats of Submission and Publication</h2>
+    	<h2 id="formats">Formats of Submission and Publication</h2>
        <p>DHQ is an entirely digital journal, published in XML. We accept submissions in the following formats:</p>
        <ul>
           <li>XML files encoded in the DHQ markup language; a <a href="http://www.digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.rnc">schema</a>, <a href="http://www.digitalhumanities.org/dhq/articles/templates/dhq_author_template.xml">authoring template</a>, and <a href="https://github.com/Digital-Humanities-Quarterly/dhq-journal/wiki/DHQ-Encoding-Documentation">encoding documentation</a> are available.</li>
