remove summer deadline suspension notice

--- a/submissions/index.html
+++ b/submissions/index.html
@@ -39,7 +39,7 @@
         
         <h2 id="logistics">Submitting an Article</h2>
        <p><em><a href="https://openjournals.library.northeastern.edu/dhq/home">Submit an article</a></em></p>
-       <p>DHQ invites submissions at rolling three-month intervals with deadlines on January 15, April 15, July 15, and October 15. <strong>In summer 2023, we are suspending our July 15 submission deadline to allow the journal to accomplish some essential updates. Submissions will resume with the October 15 deadline. All articles submitted over the summer will be considered at that point. Publication schedules and special issues will not be affected.</strong>
+       <p>DHQ invites submissions at rolling three-month intervals with deadlines on January 15, April 15, July 15, and October 15. 
            
            <!-- 
                <strong>In 2022, we will be suspending our January submission deadline as part of a planned overhaul of the journal's current submission queue. Any articles submitted between December 2021 and April 15, 2022 will be reviewed starting in April. Publication of the journal will be uninterrupted.</strong>
