adding a test SVG image

--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -69,14 +69,16 @@
     		<li>For graphs, focus on the meaning or outcomes of the data, rather than what the chart looks like. Consider the following template by Amy Cesal as a beginning point: “[chart type] of [type of data] where [ reason for including chart]”. You may need to deviate from this form to avoid redundancy or provide the most appropriate description for the context. </li>
     	</ul>
     	
-    	<p>Depending on how an image is being used, it may require a different description in different contexts. Here are some examples:</p>
-    	<img src="../common/images/esther_cat.png" alt="An image of a cat, serving as a sample image"/>
+    	<p>Depending on how an image is being used, it may require a different description in different contexts. Here are some examples:
+    	<img src="../common/images/esther_cat.png" alt="An image of a cat, serving as a sample image"/></p>
     	<ul>
 			<li>A possible general description: A cat with a blanket.</li>
     		<li>For a study on the behavior of a particular cat: Esther kneading a soft surface in the evening.</li>
     		<li>For a treatise on cat breeds: A mature Nebelung cat.</li>
     		<li>For an article about personal photography and consumer electronics: A photograph taken in low light on an iPhone 12.</li>
 		</ul>
+    	       <p> <img src="../articles/999887/resources/images/figure03.svg" alt="A tree diagram showing the category of humans subdivided into males, females, and 3rd-sex, with additional subdivisions by age."/>
+        		A tree diagram showing the category of humans subdivided into males, females, and 3rd-sex, with additional subdivisions by age.</p>
     
         <h2>Mathematical Expressions and Formulas</h2>
         <p>DHQ represents mathematical expressions and formulas using TeX or MathML. Simple mathematical expressions and formulas can usually be converted automatically as part of our initial conversion routine using OxGarage. More complex formulas may cause problems for conversion. For the initial submission, it is fine to include formulas directly in the article. If the article is accepted, we will ask you to submit a finalized version in which the formulas are indicated in the text with a label (e.g. "formula 1"), and with the actual formulas submitted in TeX or valid MathML in a separate document, so that they can be inserted into the XML at the appropriate places.</p>
