minor formatting update to submission guidelines

--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -77,8 +77,8 @@
     		<li>For a treatise on cat breeds: A mature Nebelung cat.</li>
     		<li>For an article about personal photography and consumer electronics: A photograph taken in low light on an iPhone 12.</li>
 		</ul>
-    	       <p> <img src="../articles/999887/resources/images/figure03.svg" alt="A tree diagram showing the category of humans subdivided into males, females, and 3rd-sex, with additional subdivisions by age."/>
-        		A tree diagram showing the category of humans subdivided into males, females, and 3rd-sex, with additional subdivisions by age.</p>
+    	<p><img src="../articles/999887/resources/images/figure03.svg" alt="A tree diagram showing the category of humans subdivided into males, females, and 3rd-sex, with additional subdivisions by age."/></p>
+    	       <p>A tree diagram showing the category of humans subdivided into males, females, and 3rd-sex, with additional subdivisions by age.</p>
     
         <h2>Mathematical Expressions and Formulas</h2>
         <p>DHQ represents mathematical expressions and formulas using TeX or MathML. Simple mathematical expressions and formulas can usually be converted automatically as part of our initial conversion routine using OxGarage. More complex formulas may cause problems for conversion. For the initial submission, it is fine to include formulas directly in the article. If the article is accepted, we will ask you to submit a finalized version in which the formulas are indicated in the text with a label (e.g. "formula 1"), and with the actual formulas submitted in TeX or valid MathML in a separate document, so that they can be inserted into the XML at the appropriate places.</p>
