Update Joel Lee's bio

--- a/people/people.html
+++ b/people/people.html
@@ -129,10 +129,10 @@
         <div>
           <div id="BioExpander10" style="DISPLAY: inline">
             <a class="expandCollapse" title="View Bio" href="javascript:expandBio(10)">[+]</a>
-          </div> Collaborative Development Editor: Joel Lee, United States Holocaust Memorial Museum <br />
+          </div> Collaborative Development Editor: Joel Lee, Northeastern University <br />
         </div>
         <div id="Bio10" style="DISPLAY: none">
-            <p class="bio">Joel Lee is currently a contract researcher with the Future Projects team at the United States Holocaust Memorial Museum, working on digital humanities and focusing on the citizen history newspaper project History Unfolded. He was the 2021-2022 Digital Humanities Associate Fellow at the museum and before that he worked closely with the Price Lab for Digital Humanities while studying at the University of Pennsylvania.</p>
+            <p class="bio">Joel Lee is currently the Data Engineer at the Digital Scholarship Group in the Northeastern University Library. Prior to this, he was a contract researcher with the Future Projects team at the United States Holocaust Memorial Museum, working on digital humanities and focusing on the citizen history newspaper project History Unfolded. He was the 2021-2022 Digital Humanities Associate Fellow at the museum and before that he worked closely with the Price Lab for Digital Humanities while studying at the University of Pennsylvania.</p>
         </div>
 
 
