--- a/submissions/index.html
+++ b/submissions/index.html
@@ -53,8 +53,8 @@
 </p>
        <p>DHQ accepts submissions for the following categories:</p>
 <ul><li>Articles: Article-length pieces describing original research.</li>
-   <li>Issues in Digital Humanities: Substantive, provocative opinion-driven essays of any length. </li>
-   <li>Reviews: Reviews of other publications (digital or print), tools, artworks, conferences, and other relevant material. </li>
+<!--   <li>Issues in Digital Humanities: Substantive, provocative opinion-driven essays of any length. </li>
+-->   <li>Reviews: Reviews of other publications (digital or print), tools, artworks, conferences, and other relevant material. </li>
    <li>Case Studies: Detailed analyses of specific projects that contextualize the project within the DH field, and demonstrate its significance for other practitioners.</li>
     <li>Field Reports: Reports on digital humanities-related practice from the perspective of a particular locale</li>
 </ul>
